[package]
name = "contact-htmx-tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
axum-flash = "0.8.0"
lazy_static = "1.5.0"
serde = {version = "1.0.219", features = ["derive"]}
tera = "1.20.0"
tokio = {version = "1.45.1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }